Styling changes and contact page
Stagnant design for future use until dynamic content is added.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="css/cover.css" rel="stylesheet">
   </head>
 
-  <body class="text-center">
+  <body class="text-center cover-image" style="
+    background-image: url(img/background.jpg) !important;">
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
@@ -19,7 +20,7 @@
           <h3 class="masthead-brand">Cozee</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">Contact</a>
           </nav>
         </div>
       </header>
@@ -28,9 +29,29 @@
         <h1 class="cover-heading">Get Cozee.</h1>
         <p class="lead">Cozee is a one stop shop for all your home automation needs. Commercial or Residential - we've got your back.</p>
         <p class="lead">
-          <a href="contact.html" class="btn btn-lg btn-secondary">Learn more</a>
+          <a href="contact.html" class="btn btn-lg btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">Learn more</a>
         </p>
       </main>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalCenterTitle">Want to know more about Cozee ?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              The best way to contact us is to send an email to <a class="mylink" href = "mailto:contact@getcozee.com">contact@getcozee.com</a> with your details and questions :)
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
@@ -38,9 +59,12 @@
         </div>
       </footer>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="js/vendor/popper.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script>window.Popper || document.write('<script src="js/vendor/popper.min.js"><\/script>')</script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>window.boostrap || document.write('<script src="js/vendor/bootstrap.min.js"><\/script>')</script>
   </body>
 </html>
