Updated company logo.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">Cozee</h3>
+          <!-- <h3 class="masthead-brand">Cozee</h3> -->
+          <img style="width:130px; float:left" src="img/getcozee_white.svg"></img>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">Contact</a>
